--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -20,9 +20,9 @@
             "type": "clr",
             "request": "launch", 
             "preLaunchTask": "build",
-            "program": "${env:FuseeRoot}bin/Debug/Player/Desktop/Fusee.Engine.Player.Desktop.exe",
-            "args": ["${workspaceRoot}/bin/Debug/netcoreapp2.0/MyFirstFusee.dll"],
-            "cwd": "${env:FuseeRoot}bin/Debug/Player/Desktop",
+            "program": "${env:FuseeRoot}/bin/Debug/Player/Desktop/Fusee.Engine.Player.Desktop.exe",
+            "args": ["${workspaceRoot}/bin/Debug/netstandard2.0/MyFirstFusee.dll"],
+            "cwd": "${env:FuseeRoot}/bin/Debug/Player/Desktop",
             "stopAtEntry": false,
             "console": "externalTerminal"           
         },
